--- a/src/components/FilterBar/FilterBar.css
+++ b/src/components/FilterBar/FilterBar.css
@@ -23,14 +23,40 @@
     color: var(--dark-cyan);
     font-weight: 700;
     font-size: 0.8rem;
+    line-height: 1;
+    display: flex;
+    align-items: center;
     cursor: pointer;
-    margin: 0 0.5rem;
-    border-radius: 0.2rem;
+    margin-right: 3rem;
+    border-radius: 0.2rem 0 0 0.2rem;
+    position: relative;
 }
 
-.item:hover {
+
+.item::after {
+    content: 'x';
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 25px;
+    border-radius: 0 0.2rem 0.2rem 0;
+    top: 0;
+    right: -25px;
     background-color: var(--dark-cyan);
     color: white;
+    font-size: 1rem;
+    font-weight: 500;
+    transition: 0.3s all;
+}
+
+.item:hover::after {
+    background-color: var(--very-dark-grayish-cyan);
+}
+
+.left-items {
+    display: flex;
 }
 
 .clear {
